display wordcloud in notebook, add mask

--- a/google_search_wordcloud.ipynb
+++ b/google_search_wordcloud.ipynb
@@ -13,22 +13,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime\n",
     "import os\n",
-    "\n",
-    "# Google search queries\n",
-    "from google import google\n",
-    "\n",
-    "# regex package\n",
     "import re\n",
-    "\n",
-    "# Stop words\n",
     "import nltk\n",
-    "nltk.download('stopwords')\n",
+    "import datetime\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
+    "from google import google\n",
+    "import matplotlib.pyplot as plt\n",
+    "from wordcloud import WordCloud\n",
     "from nltk.corpus import stopwords\n",
     "\n",
-    "# Wordcloud\n",
-    "from wordcloud import WordCloud"
+    "nltk.download('stopwords')\n",
+    "%matplotlib inline\n",
+    "\n",
+    "from IPython.core.display import display, HTML\n",
+    "display(HTML(\"<style>.container { width:100% !important; }</style>\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creation du dossier wordcloud_images"
    ]
   },
   {
@@ -39,6 +46,13 @@
    "source": [
     "if not os.path.exists('wordcloud_images'):\n",
     "    os.makedirs('wordcloud_images')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions"
    ]
   },
   {
@@ -120,25 +134,36 @@
    "source": [
     "def make_wordcloud(keyword,\n",
     "                   num_page,\n",
-    "                   additionnal_stop_words_list=[\"\\xa0\"],\n",
+    "                   mask,\n",
+    "                   additionnal_stop_words_list,\n",
     "                   lang=\"french\"):\n",
     "\n",
     "    long_string_clean = get_clean_string_from_search(keyword, \n",
     "                                                     num_page,\n",
     "                                                     additionnal_stop_words_list)\n",
     "    file_path = get_file_path(keyword, num_page)\n",
+    "    \n",
+    "    if mask :\n",
+    "        path=os.getcwd()\n",
+    "        mask = np.array(Image.open(os.path.join(path,\"mask\", mask)))\n",
     "\n",
     "    # Create a WordCloud object\n",
-    "    wordcloud = WordCloud(background_color=\"white\", \n",
+    "    wordcloud = WordCloud(background_color=\"white\",\n",
     "                          max_words=5000, \n",
-    "                          contour_width=3, contour_color='steelblue')\n",
+    "                          contour_width=3, \n",
+    "                          contour_color='steelblue',\n",
+    "                          width=2400,\n",
+    "                          height=1200,\n",
+    "                          mask=mask)\n",
     "\n",
     "    # Generate a word cloud\n",
     "    wordcloud.generate(long_string_clean)\n",
     "\n",
     "    # Visualize the word cloud\n",
     "    wordcloud.to_file(file_path)\n",
-    "    wordcloud.to_image()"
+    "    wordcloud.to_image()\n",
+    "    \n",
+    "    return wordcloud"
    ]
   },
   {
@@ -147,14 +172,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keyword = \"xebia\"\n",
-    "num_page = 2\n",
-    "additionnal_stop_words_list=[\"\\xa0\",\n",
-    "                             \"publicis\",\n",
-    "                             \"sapient\"]\n",
-    "make_wordcloud(keyword, \n",
-    "               num_page, \n",
-    "               additionnal_stop_words_list)"
+    "def plot_wordcloud(cloud):\n",
+    "    \n",
+    "    cloud_array = cloud.to_array()\n",
+    "    \n",
+    "    plt.figure(figsize=(20,10))\n",
+    "    plt.axis(\"off\")\n",
+    "    plt.imshow(cloud_array)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -163,13 +188,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keyword = \"publicis sapient engineering\"\n",
-    "num_page = 2\n",
-    "additionnal_stop_words_list=[\"\\xa0\",\n",
-    "                             \"xebia\"]\n",
-    "make_wordcloud(keyword, \n",
-    "               num_page, \n",
-    "               additionnal_stop_words_list)"
+    "def display_wordcloud(word, additionnal_stop_words_list, num_page=1, mask=None):\n",
+    "\n",
+    "    cloud = make_wordcloud(keyword=word, \n",
+    "                   num_page=num_page, \n",
+    "                   additionnal_stop_words_list=additionnal_stop_words_list,\n",
+    "                   mask=mask)\n",
+    "\n",
+    "    plot_wordcloud(cloud)"
    ]
   },
   {
@@ -178,12 +204,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keyword = \"cabinet conseil intelligence artificielle\"\n",
-    "num_page = 2\n",
-    "additionnal_stop_words_list=[\"\\xa0\"]\n",
-    "make_wordcloud(keyword, \n",
-    "               num_page, \n",
-    "               additionnal_stop_words_list)"
+    "display_wordcloud(word=\"xebia\",\n",
+    "                 additionnal_stop_words_list=[\"\\xa0\", \"publicis\", \"sapient\"],\n",
+    "                 num_page=2)"
    ]
   },
   {
@@ -192,12 +215,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keyword = \"reinforcement learning france\"\n",
-    "num_page = 2\n",
-    "additionnal_stop_words_list=[\"\\xa0\"]\n",
-    "make_wordcloud(keyword, \n",
-    "               num_page, \n",
-    "               additionnal_stop_words_list)"
+    "display_wordcloud(word=\"publicis sapient engineering\",\n",
+    "                 additionnal_stop_words_list=[\"\\xa0\", \"xebia\"],\n",
+    "                 num_page=2)"
    ]
   },
   {
@@ -206,13 +226,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keyword = \"natural language processing en france\"\n",
-    "num_page = 2\n",
-    "additionnal_stop_words_list=[\"\\xa0\"]\n",
-    "make_wordcloud(keyword, \n",
-    "               num_page, \n",
-    "               additionnal_stop_words_list)"
+    "display_wordcloud(word=\"cabinet conseil intelligence artificielle\",\n",
+    "                 additionnal_stop_words_list=[\"\\xa0\"],\n",
+    "                 num_page=2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_wordcloud(word=\"reinforcement learning france\",\n",
+    "                 additionnal_stop_words_list=[\"\\xa0\"],\n",
+    "                 num_page=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display_wordcloud(word=\"natural language processing en france\",\n",
+    "                 additionnal_stop_words_list=[\"\\xa0\"],\n",
+    "                 num_page=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -231,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
